...
              ),
              Container(
                child: addedprodtocard
                    ? Column(
                        children: <Widget>[
                          Text(
                            "Produs adăugat în coș!",
                            style: TextStyle(
                                fontSize: MediaQuery.of(context).size.height *
                                    0.01 *
                                    1.75),
                          ),
                          const SizedBox(
...
