...
              ),
              Expanded(
                child: SingleChildScrollView(
                  child: Column(
                    children: <Widget>[
                      const Text(
                        "Restaurante",
                        style: TextStyle(
                            fontFamily: 'Lato-Black',
                            fontSize: 30,
                            color: Colors.red,
                            fontWeight: FontWeight.w700),
                      ),
...
